--- a/666-Pro-Python/4- Normalization.ipynb
+++ b/666-Pro-Python/4- Normalization.ipynb
@@ -81,7 +81,7 @@
    ],
    "source": [
     "import unicodedata\n",
-    "#  Returns the name assigned to the character chr as a string.\n",
+    "# unicodedata.name() => Returns the name assigned to the character chr as a string.\n",
     "#  If no name is defined, default is returned, or, if not given, ValueError is raised.\n",
     "unicodedata.name(eacute1)\n",
     "\n",
