--- a/666-Pro-Python/4- Normalization.ipynb
+++ b/666-Pro-Python/4- Normalization.ipynb
@@ -102,7 +102,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "eacute_combined1 = \"e\\u0301\"\n",
+    "eacute_combined2 = \"e\\N{COMBINING ACUTE ACCENT}\""
+   ]
   }
  ],
  "metadata": {
