--- a/666-Pro-Python/4- Normalization.ipynb
+++ b/666-Pro-Python/4- Normalization.ipynb
@@ -104,7 +104,8 @@
    "outputs": [],
    "source": [
     "eacute_combined1 = \"e\\u0301\"\n",
-    "eacute_combined2 = \"e\\N{COMBINING ACUTE ACCENT}\""
+    "eacute_combined2 = \"e\\N{COMBINING ACUTE ACCENT}\"\n",
+    "eacute_combined3 = \"e\" + \"\\u0301\"\n"
    ]
   }
  ],
