eacute_combined1, eacute_combined2, eacute_combined3

--- a/666-Pro-Python/4- Normalization.ipynb
+++ b/666-Pro-Python/4- Normalization.ipynb
@@ -105,7 +105,8 @@
    "source": [
     "eacute_combined1 = \"e\\u0301\"\n",
     "eacute_combined2 = \"e\\N{COMBINING ACUTE ACCENT}\"\n",
-    "eacute_combined3 = \"e\" + \"\\u0301\"\n"
+    "eacute_combined3 = \"e\" + \"\\u0301\"\n",
+    "print(eacute_combined1, eacute_combined2, eacute_combined3)"
    ]
   }
  ],
