--- a/666-Pro-Python/4- Normalization.ipynb
+++ b/666-Pro-Python/4- Normalization.ipynb
@@ -122,7 +122,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "eacute_combined1 == eacute_combined2 == eacute_combined3"
+   ]
   },
   {
    "cell_type": "code",
