len(eacute_combined1)

--- a/666-Pro-Python/4- Normalization.ipynb
+++ b/666-Pro-Python/4- Normalization.ipynb
@@ -142,7 +142,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "len(eacute_combined1)"
+   ]
   },
   {
    "cell_type": "code",
