--- a/666-Pro-Python/4- Normalization.ipynb
+++ b/666-Pro-Python/4- Normalization.ipynb
@@ -160,7 +160,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    ">We built a Unicode character from two characters, and it looks the same as the origi‐\n",
+    "nal 'é'. But as they say on Sesame Street, one of these things is not like the other:"
+   ]
   },
   {
    "cell_type": "code",
