--- a/666-Pro-Python/4- Normalization.ipynb
+++ b/666-Pro-Python/4- Normalization.ipynb
@@ -188,7 +188,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    ">If you had two different Unicode text strings from different sources, one using\n",
+    "eacute1 and another eacute_combined1, they would appear the same, but would\n",
+    "mysteriously not act the same.\n",
+    "You can fix this with the normalize() function in the unicodedata module:"
+   ]
   },
   {
    "cell_type": "code",
