--- a/666-Pro-Python/4- Normalization.ipynb
+++ b/666-Pro-Python/4- Normalization.ipynb
@@ -189,6 +189,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# IMPORTENT NOTE:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     ">If you had two different Unicode text strings from different sources, one using\n",
     "eacute1 and another eacute_combined1, they would appear the same, but would\n",
     "mysteriously not act the same.\n",
