eacute_normalized = unicodedata.normalize('NFC', eacute_combined1)

--- a/666-Pro-Python/4- Normalization.ipynb
+++ b/666-Pro-Python/4- Normalization.ipynb
@@ -208,7 +208,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import unicodedata"
+    "import unicodedata\n",
+    "\n",
+    "eacute_normalized = unicodedata.normalize('NFC', eacute_combined1)"
    ]
   }
  ],
