len(eacute_normalized)

--- a/666-Pro-Python/4- Normalization.ipynb
+++ b/666-Pro-Python/4- Normalization.ipynb
@@ -210,7 +210,8 @@
    "source": [
     "import unicodedata\n",
     "\n",
-    "eacute_normalized = unicodedata.normalize('NFC', eacute_combined1)"
+    "eacute_normalized = unicodedata.normalize('NFC', eacute_combined1)\n",
+    "len(eacute_normalized)\n"
    ]
   }
  ],
