print(len(eacute_normalized))

--- a/666-Pro-Python/4- Normalization.ipynb
+++ b/666-Pro-Python/4- Normalization.ipynb
@@ -211,7 +211,7 @@
     "import unicodedata\n",
     "\n",
     "eacute_normalized = unicodedata.normalize('NFC', eacute_combined1)\n",
-    "len(eacute_normalized)\n"
+    "print(len(eacute_normalized))\n"
    ]
   }
  ],
