--- a/666-Pro-Python/4- Normalization.ipynb
+++ b/666-Pro-Python/4- Normalization.ipynb
@@ -209,7 +209,7 @@
    "outputs": [],
    "source": [
     "import unicodedata\n",
-    "# Return the normal form 'form' for the Unicode string unistr.\n",
+    "# unicodedata.normalize() => Return the normal form 'form' for the Unicode string unistr.\n",
     "# Valid values for form are 'NFC', 'NFKC', 'NFD', and 'NFKD'.\n",
     "eacute_normalized = unicodedata.normalize('NFC', eacute_combined1)\n",
     "print(len(eacute_normalized))\n"
