unicodedata.name(eacute_normalized)

--- a/666-Pro-Python/4- Normalization.ipynb
+++ b/666-Pro-Python/4- Normalization.ipynb
@@ -213,7 +213,8 @@
     "# Valid values for form are 'NFC', 'NFKC', 'NFD', and 'NFKD'.\n",
     "eacute_normalized = unicodedata.normalize('NFC', eacute_combined1)\n",
     "print(len(eacute_normalized))\n",
-    "print(eacute_normalized == eacute1)"
+    "print(eacute_normalized == eacute1)\n",
+    "unicodedata.name(eacute_normalized)"
    ]
   }
  ],
