rune paye atefeh

--- a/666-Pro-Python/4- Normalization.ipynb
+++ b/666-Pro-Python/4- Normalization.ipynb
@@ -204,9 +204,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "True\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'LATIN SMALL LETTER E WITH ACUTE'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import unicodedata\n",
     "# unicodedata.normalize() => Return the normal form 'form' for the Unicode string unistr.\n",
@@ -216,6 +235,13 @@
     "print(eacute_normalized == eacute1)\n",
     "unicodedata.name(eacute_normalized)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
