# That 'NFC' means normal form, composed.

--- a/666-Pro-Python/4- Normalization.ipynb
+++ b/666-Pro-Python/4- Normalization.ipynb
@@ -233,7 +233,9 @@
     "eacute_normalized = unicodedata.normalize('NFC', eacute_combined1)\n",
     "print(len(eacute_normalized))\n",
     "print(eacute_normalized == eacute1)\n",
-    "unicodedata.name(eacute_normalized)"
+    "unicodedata.name(eacute_normalized)\n",
+    "\n",
+    "# That 'NFC' means normal form, composed."
    ]
   },
   {
