--- a/99-Pro-Python/5-Text Strings- Regular Expressions.ipynb
+++ b/99-Pro-Python/5-Text Strings- Regular Expressions.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -37,6 +37,9 @@
    ],
    "source": [
     "import re\n",
+    "# Here, 'You' is the pattern we’re looking for, and 'Young Frankenstein' is the source\n",
+    "# (the string we want to search). match() checks whether the source begins with the\n",
+    "# pattern.\n",
     "result = re.match(\"you\", \"young money\")\n",
     "print(result)\n",
     "print(result.end())\n",
