--- a/99-Pro-Python/5-Text Strings- Regular Expressions.ipynb
+++ b/99-Pro-Python/5-Text Strings- Regular Expressions.ipynb
@@ -55,6 +55,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">For more complex matches, you can compile your pattern first to speed up the match later:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "thepattern = re.compile(\"you\")\n",
+    "\n",
+    "result = thepattern.match('Young Frankenstein')\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
