--- a/99-Pro-Python/5-Text Strings- Regular Expressions.ipynb
+++ b/99-Pro-Python/5-Text Strings- Regular Expressions.ipynb
@@ -63,14 +63,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import re\n",
     "thepattern = re.compile(\"you\")\n",
     "\n",
-    "result = thepattern.match('Young Frankenstein')\n"
+    "result = thepattern.match('Young Frankenstein')\n",
+    "# is not fun? I like python for these things. its flexible"
    ]
   },
   {
