--- a/99-Pro-Python/5-Text Strings- Regular Expressions.ipynb
+++ b/99-Pro-Python/5-Text Strings- Regular Expressions.ipynb
@@ -75,6 +75,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">I’ll say it again here:\n",
+    "match() only matches a pattern starting at the beginning of the\n",
+    "source. search() matches a pattern anywhere in the source."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "match() is not the only way to compare the pattern and source. Here are several other\n",
+    "methods you can use (we discuss each in the following sections):\n",
+    "• search() returns the first match, if any.\n",
+    "• findall() returns a list of all non-overlapping matches, if any.\n",
+    "• split() splits source at matches with pattern and returns a list of the string\n",
+    "pieces.\n",
+    "\n",
+    "sub() takes another replacement argument, and changes all parts of source that\n",
+    "are matched by pattern to replacement."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
