re.search/ lets explore more

--- a/99-Pro-Python/5-Text Strings- Regular Expressions.ipynb
+++ b/99-Pro-Python/5-Text Strings- Regular Expressions.ipynb
@@ -63,15 +63,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(0, 3), match='You'>\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
-    "thepattern = re.compile(\"you\")\n",
+    "thepattern = re.compile(\"You\")\n",
     "\n",
     "result = thepattern.match('Young Frankenstein')\n",
-    "# is not fun? I like python for these things. its flexible"
+    "# is not fun? I like python for these things. its flexible\n",
+    "print(result)"
    ]
   },
   {
@@ -96,6 +105,36 @@
     "\n",
     "sub() takes another replacement argument, and changes all parts of source that\n",
     "are matched by pattern to replacement."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(11, 14), match='You'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "thepattern = re.compile(\"You\")\n",
+    "\n",
+    "result = thepattern.search('Lets Teast Young Frankenstein')\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">Most of the regular expression examples here use ASCII, but\n",
+    "Python’s string functions, including regular expressions, work with\n",
+    "any Python string and any Unicode characters."
    ]
   },
   {
