--- a/99-Pro-Python/5-Text Strings- Regular Expressions.ipynb
+++ b/99-Pro-Python/5-Text Strings- Regular Expressions.ipynb
@@ -146,6 +146,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You\n",
+      "You\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "source = 'Young Frankenstein'\n",
+    "m = re.match('You', source) # match starts at \"the beginning of source\"\n",
+    "\n",
+    "if m: # match returns an object; do this to see what matched\n",
+    "    print(m.group())\n",
+    "\n",
+    "m = re.match('^You', source) # start anchor does the same  # ^_^\n",
+    "if m:\n",
+    "    print(m.group())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
