there is nothing

--- a/99-Pro-Python/5-Text Strings- Regular Expressions.ipynb
+++ b/99-Pro-Python/5-Text Strings- Regular Expressions.ipynb
@@ -173,6 +173,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# How about 'Frank'?\n",
+    "\n",
+    "import re\n",
+    "source = 'Young Frankenstein'\n",
+    "m = re.match('Frank', source) # match starts at \"the beginning of source\"\n",
+    "\n",
+    "if m: # match returns an object; do this to see what matched\n",
+    "    print(m.group())\n",
+    "\n",
+    "# sure; there is nothing"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
