--- a/99-Pro-Python/5-Text Strings- Regular Expressions.ipynb
+++ b/99-Pro-Python/5-Text Strings- Regular Expressions.ipynb
@@ -186,7 +186,9 @@
     "if m: # match returns an object; do this to see what matched\n",
     "    print(m.group())\n",
     "\n",
-    "# sure; there is nothing"
+    "# sure; there is nothing\n",
+    "# let’s use search() \n",
+    "# oh yeah we try that "
    ]
   },
   {
