--- a/99-Pro-Python/5-Text Strings- Regular Expressions.ipynb
+++ b/99-Pro-Python/5-Text Strings- Regular Expressions.ipynb
@@ -192,6 +192,57 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ok check this out :\n",
+    "\n",
+    "Let’s change the pattern and try a beginning match with match() again:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Young Frank\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "source = 'Young Frankenstein'\n",
+    "m = re.match('.*Frank', source)\n",
+    "if m: # match returns an object\n",
+    "    print(m.group())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> WTF? "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# I now this sound crazy but :\n",
+    "\n",
+    ">Here’s a brief explanation of how our new '.*Frank' pattern works:\n",
+    "• . means any single character.\n",
+    "• * means zero or more of the preceding thing. Together, .* mean any number of\n",
+    "characters (even zero).\n",
+    "• Frank is the phrase that we wanted to match, somewhere.\n",
+    "match() returned the string that matched .*Frank: 'Young Frank'."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
