--- a/99-Pro-Python/5-Text Strings- Regular Expressions.ipynb
+++ b/99-Pro-Python/5-Text Strings- Regular Expressions.ipynb
@@ -243,6 +243,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Find First Match with search()\n",
+    "You can use search() to find the pattern 'Frank' anywhere in the source string\n",
+    "'Young Frankenstein', without the need for the .* wildcards:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Frank\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "source = 'Young Frankenstein'\n",
+    "m = re.search('Frank', source)\n",
+    "if m: # search returns an object\n",
+    "    print(m.group())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Find All Matches with findall()\n",
+    "The preceding examples looked for one match only. But what if you want to know\n",
+    "how many instances of the single-letter string 'n' are in the string?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['n', 'n', 'n', 'n']\n",
+      "Found 4 matches\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "source = 'Young Frankenstein'\n",
+    "m = re.findall('n', source)\n",
+    "print(m) # findall returns a list\n",
+    "print('Found', len(m), 'matches')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
