--- a/99-Pro-Python/5-Text Strings- Regular Expressions.ipynb
+++ b/99-Pro-Python/5-Text Strings- Regular Expressions.ipynb
@@ -308,7 +308,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# How about 'n' followed by any character?\n",
+    "import re\n",
+    "source = 'Young Frankenstein'\n",
+    "m = re.findall('n.', source)\n",
+    "print(m)"
+   ]
   }
  ],
  "metadata": {
