How about 'n' followed by any  * character?

--- a/99-Pro-Python/5-Text Strings- Regular Expressions.ipynb
+++ b/99-Pro-Python/5-Text Strings- Regular Expressions.ipynb
@@ -312,7 +312,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ng', 'nk', 'ns']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# How about 'n' followed by any 1character?\n",
+    "import re\n",
+    "source = 'Young Frankenstein'\n",
+    "m = re.findall('n.', source)\n",
+    "print(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -324,10 +345,52 @@
     }
    ],
    "source": [
-    "# How about 'n' followed by any character?\n",
+    "# How about 'n' followed by any 2character?\n",
     "import re\n",
     "source = 'Young Frankenstein'\n",
-    "m = re.findall('n.', source)\n",
+    "m = re.findall('n..', source)\n",
+    "print(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ng F', 'nken']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# How about 'n' followed by any 3character?\n",
+    "import re\n",
+    "source = 'Young Frankenstein'\n",
+    "m = re.findall('n...', source)\n",
+    "print(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['', '', '', 'n', '', '', '', '', '', 'n', '', '', 'n', '', '', '', '', 'n', '']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# How about 'n' followed by any  * character?\n",
+    "import re\n",
+    "source = 'Young Frankenstein'\n",
+    "m = re.findall('n*', source)\n",
     "print(m)"
    ]
   },
