--- a/99-Pro-Python/5-Text Strings- Regular Expressions.ipynb
+++ b/99-Pro-Python/5-Text Strings- Regular Expressions.ipynb
@@ -395,6 +395,285 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# We need to say that the character after 'n' is optional, with   \" ? \""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ng', 'nk', 'ns', 'n']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "source = 'Young Frankenstein'\n",
+    "m = re.findall('n.?', source)\n",
+    "print(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ng F', 'nken']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# How about 'n' followed by any 3character and optional?\n",
+    "import re\n",
+    "source = 'Young Frankenstein'\n",
+    "m = re.findall('n...?', source)\n",
+    "print(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ng ', 'nke', 'nst']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# How about 'n' followed by any 2character and optional?\n",
+    "import re\n",
+    "source = 'Young Frankenstein'\n",
+    "m = re.findall('n..?', source)\n",
+    "print(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['', '', '', '', 'n', '', '', '', '', '', '', 'n', '', '', '', 'n', '', '', '', '', '', 'n', '']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# How about 'n' followed by any *character and optional?\n",
+    "import re\n",
+    "source = 'Young Frankenstein'\n",
+    "m = re.findall('n*?', source)\n",
+    "print(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['', '', '', 'n', '', '', '', '', '', 'n', '', '', 'n', '', '', '', '', 'n', '']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# How about 'n'  and optional?\n",
+    "import re\n",
+    "source = 'Young Frankenstein'\n",
+    "m = re.findall('n?', source)\n",
+    "print(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['', '', '', 'n', '', '', '', '', '', 'n', '', '', 'n', '', '', '', '', 'n', '']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# How about 'n' followed by just * character ?\n",
+    "import re\n",
+    "source = 'Young Frankenstein'\n",
+    "m = re.findall('n*', source)\n",
+    "print(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ng Frankenstein']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# How about 'n' followed by dot and * character ?\n",
+    "import re\n",
+    "source = 'Young Frankenstein'\n",
+    "m = re.findall('n.*', source)\n",
+    "print(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['n', 'n', 'n', 'n']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# How about 'n' followed by just + character ?\n",
+    "import re\n",
+    "source = 'Young Frankenstein'\n",
+    "m = re.findall('n+', source) # ==  re,findall('n', source)\n",
+    "print(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# How about 'n' followed by just - character ?\n",
+    "import re\n",
+    "source = 'Young Frankenstein'\n",
+    "m = re.findall('n-', source) # ==  re,findall('n', source)\n",
+    "print(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# How about 'n' followed by just % character ?\n",
+    "import re\n",
+    "source = 'Young Frankenstein'\n",
+    "m = re.findall('n%', source) # ==  re,findall('n', source)\n",
+    "print(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# How about 'n' followed by just % character ?\n",
+    "import re\n",
+    "source = 'Young Frankenstein'\n",
+    "m = re.findall('n#', source) \n",
+    "print(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ng Frankenstein']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# How about 'n' followed by .+ character ?\n",
+    "import re\n",
+    "source = 'Young Frankenstein'\n",
+    "m = re.findall('n.+', source) # ==  re,findall('n.*', source)\n",
+    "print(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['n', 'n', 'n', 'n']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# How about 'n' followed by just % character ?\n",
+    "import re\n",
+    "source = 'Young Frankenstein'\n",
+    "m = re.findall('n+', source) \n",
+    "print(m)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
