--- a/99-Pro-Python/5-Text Strings- Regular Expressions.ipynb
+++ b/99-Pro-Python/5-Text Strings- Regular Expressions.ipynb
@@ -666,7 +666,7 @@
     }
    ],
    "source": [
-    "# How about 'n' followed by just % character ?\n",
+    "# How about 'n' followed by just + character ?\n",
     "import re\n",
     "source = 'Young Frankenstein'\n",
     "m = re.findall('n+', source) \n",
