Split at Matches with split()

--- a/99-Pro-Python/5-Text Strings- Regular Expressions.ipynb
+++ b/99-Pro-Python/5-Text Strings- Regular Expressions.ipynb
@@ -674,11 +674,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Split at Matches with split()\n",
+    "\n",
+    "The next example shows you how to split a string into a list by a pattern rather than a\n",
+    "simple string (as the normal string split() method would do):\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "import re\n",
+    "source = 'Young Frankenstein'\n",
+    "m = re.split('n', source)\n",
+    "m # split returns a list\n",
+    "['You', 'g Fra', 'ke', 'stei', '']\n"
+   ]
   }
  ],
  "metadata": {
