--- a/99-Pro-Python/5-Text Strings- Regular Expressions.ipynb
+++ b/99-Pro-Python/5-Text Strings- Regular Expressions.ipynb
@@ -685,17 +685,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['You', 'g Fra', 'ke', 'stei', '']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "import re\n",
     "source = 'Young Frankenstein'\n",
     "m = re.split('n', source)\n",
     "m # split returns a list\n",
+    "# output\n",
     "['You', 'g Fra', 'ke', 'stei', '']\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SAME AS : !"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['You', 'g Fra', 'ke', 'stei', '']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "source = 'Young Frankenstein'\n",
+    "m = source.split('n')\n",
+    "m # split returns a list\n",
+    "# output\n",
+    "['You', 'g Fra', 'ke', 'stei', '']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Replace at Matches with sub()\n",
+    "\n",
+    "This is like the string replace() method, but for patterns rather than literal strings:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "source = 'Young Frankenstein'\n",
+    "m = re.sub('n', '?', source)\n",
+    "m # sub returns a string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
